--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,78 @@
-
+aiohttp==3.8.3
+aiosignal==1.3.1
+arabic-reshaper==3.0.0
+asgiref==3.6.0
+asn1crypto==1.5.1
+async-timeout==4.0.2
+attrs==22.2.0
+branca==0.6.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+contourpy==1.0.6
+cryptography==39.0.1
+cssselect2==0.7.0
 cycler==0.11.0
 dateparser==1.1.7
 Django==4.1.5
 django-rest-framework==0.1.0
 django-restframework==0.0.1
 djangorestframework==3.14.0
+docutils==0.19
+folium==0.14.0
+fonttools==4.38.0
+fpdf==1.7.2
+frozenlist==1.3.3
 html5lib==1.1
+idna==3.4
+Jinja2==3.1.2
+Kivy==2.1.0
+kivy-deps.angle==0.3.3
+kivy-deps.glew==0.3.1
+kivy-deps.sdl2==0.4.5
+Kivy-Garden==0.1.5
+kivymd==1.1.1
+kiwisolver==1.4.4
+lxml==4.9.2
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+multidict==6.0.4
+numpy==1.24.1
+openai==0.26.4
+oscrypto==1.3.0
+packaging==22.0
 Pillow==9.4.0
+pycparser==2.21
+Pygments==2.14.0
+pyHanko==0.17.0
+pyhanko-certvalidator==0.20.1
+pyparsing==3.0.9
 pypdf==3.4.1
+pypiwin32==223
+pypng==0.20220715.0
+python-bidi==0.4.2
+python-dateutil==2.8.2
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==305
+PyYAML==6.0
+qrcode==7.4.2
+regex==2022.10.31
+reportlab==3.6.12
 requests==2.28.1
+six==1.16.0
+sqlparse==0.4.3
+stripe==5.3.0
+svglib==1.5.1
+tinycss2==1.2.1
+tqdm==4.64.1
+typing_extensions==4.5.0
+tzdata==2022.7
+tzlocal==4.2
+uritools==4.0.1
+urllib3==1.26.13
+webencodings==0.5.1
 xhtml2pdf==0.2.9
-gunicorn==20.0.4
+yarl==1.8.2
