--- a/requirements.txt
+++ b/requirements.txt
@@ -50,23 +50,24 @@ python-bidi==0.4.2
 python-dateutil==2.8.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==305
-PyYAML==6.0
-qrcode==7.4.2
-regex==2022.10.31
-reportlab==3.6.12
-requests==2.28.1
-six==1.16.0
-sqlparse==0.4.3
-stripe==5.3.0
-svglib==1.5.1
-tinycss2==1.2.1
-tqdm==4.64.1
-typing_extensions==4.5.0
-tzdata==2022.7
-tzlocal==4.2
-uritools==4.0.1
-urllib3==1.26.13
-webencodings==0.5.1
-xhtml2pdf==0.2.9
-yarl==1.8.2
+pywin32
+PyYAML
+qrcode
+regex
+reportlab
+requests
+six
+sqlparse
+stripe
+svglib
+tinycss2
+tqdm
+gunicorn
+typing_extensions
+tzdata
+tzlocal
+uritools
+urllib3
+webencodings
+xhtml2pdf
+yarl
