--- a/requirements.txt
+++ b/requirements.txt
@@ -44,20 +44,8 @@ pyHanko==0.17.0
 pyhanko-certvalidator==0.20.1
 pyparsing==3.0.9
 pypdf==3.4.1
+pycairo
 PyYAML
-qrcode
-regex
-reportlab
-requests
-svglib
-tinycss2
-tqdm
 gunicorn
-typing_extensions
-tzdata
-tzlocal
-uritools
-urllib3
-webencodings
 xhtml2pdf
-yarl
+
