--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,13 @@ Django==4.1.5
 Pillow==9.4.0
 gunicorn
 xhtml2pdf
-
+ffmpeg 
+libcairo2 
+libcairo2-dev
+pygobjet
+aiohttp==3.8.1
+yarl==1.4.2
+frozenlist==1.3.0
+setuptools 
+wheel
+libcairo2-dev
