--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ Pillow==9.4.0
 gunicorn
 xhtml2pdf
 ffmpeg 
-libcairo2 
 libcairo2-dev
 pygobjet
 aiohttp==3.8.1
@@ -12,4 +11,5 @@ yarl==1.4.2
 frozenlist==1.3.0
 setuptools 
 wheel
-libcairo2-dev
+cairo
+
